--- a/agasol.htm
+++ b/agasol.htm
@@ -7,5 +7,13 @@
 	<p><a href="https://www.agasol.gal/">agasol.gal</a></p>	
 	<p>ASOCIACION DE EMPRESAS GALEGAS DE SOFTWARE LIBRE</p>
 
+	<p>C:\Users\dawa28>nslookup www.agasol.gal</p>
+	<p>Servidor:  servidor.wirtz.local</p>
+	<p>Address:  10.42.68.254</p>
+	<p>Respuesta no autoritativa:</p>
+	<p>Nombre:  web.librebit.com</p>
+	<p>Address:  37.139.121.146</p>
+	<p>Aliases:  www.agasol.gal</p>
+
 </body>
 </html>
