--- a/agasol.htm
+++ b/agasol.htm
@@ -15,5 +15,27 @@
 	<p>Address:  37.139.121.146</p>
 	<p>Aliases:  www.agasol.gal</p>
 
+	<p>> server 8.8.8.8
+	Servidor predeterminado:  google-public-dns-a.google.com
+	Address:  8.8.8.8
+
+	> set query=mx
+	> www.agasol.gal
+	Servidor:  google-public-dns-a.google.com
+	Address:  8.8.8.8
+
+	Respuesta no autoritativa:
+	www.agasol.gal  canonical name = web.librebit.com
+
+	librebit.com
+	        primary name server = dns13.ovh.net
+	        responsible mail addr = tech.ovh.net
+	        serial  = 2019051201
+	        refresh = 86400 (1 day)
+	        retry   = 3600 (1 hour)
+	        expire  = 3600000 (41 days 16 hours)
+	        default TTL = 300 (5 mins)
+	></p>
+
 </body>
 </html>
