--- a/agasol.htm
+++ b/agasol.htm
@@ -36,6 +36,9 @@
 	        expire  = 3600000 (41 days 16 hours)
 	        default TTL = 300 (5 mins)
 	></p>
+	C:\Users\dawa28>nslookup
+	Servidor predeterminado:  servidor.wirtz.local
+	Address:  10.42.68.254
 
 </body>
 </html>
